frontend/src/styles/base/_project.scss
*, *:before, *:after {
    position: relative;
    box-sizing: border-box;
    max-height: 1000000px; // Disables Android's font boosting
    background: image-url("transparent.gif"); // Disables Android's Auto-Fit Pages
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // Disables Tap Highlight Color
}

html {
    height: 100%;
    font-size: 100%;
    overflow-y: auto;

    @include mq("lg") {
        // min-width: 960px;
        min-width: 1024px;
    }

    @include mq("sm") {
        min-width: 320px;

        @include mq("ol") {
            // min-width: 640px;
        }

        @include mq("l") {
            // landscape styles here
            min-width: 640px;
        }

        @include mq("p") {
            // portrait styles here
        }
    }

    &.nav-open {
        overflow-y: initial;

        body {
            overflow: hidden;
        }
    }

}

body {
    min-height: 100%;

    @include mq("lg") {
        padding-top: 100px; // for the sticky header in desktop
    }

}

a {
    color: inherit;
    text-decoration: none;
    cursor: pointer;
    @include inline-block;

    &:focus {
        outline: 0;
        outline: thin dotted \9; // IE6-9
    }
    &:hover {
        text-decoration: none;
    }

    &.scroll-point {
        margin-top: -10px;
        position: absolute;
        display: block;
    }

    &.anchor{
        padding-top: 118px !important;
        height: 0px;
        display: inline;
    }
}

p a {
    // display: inline;
}

input,
select,
textarea {
    font-family: inherit;
    font-size: inherit;
    line-height: normal;
    color: inherit;
    padding: 0;
    margin: 0;
}

label {
    cursor: pointer;
}

.nobr,
nobr {
    white-space: nowrap;
}

br {
    display: none;

    &.mobile-break {
        @include mq('sm') {
            display: block;
        }
    }
    &.tablet-break {
        @include mq('md') {
            display: block;
        }
    }
    &.desktop-break {
        @include mq('lg') {
            display: block;
        }
    }
    &.xl-break {
        // @include mq('xl') {
        //     display: block;
        // }
    }
}

sub, sup {
  font-size: 0.6em;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
    top: -0.5em;
    white-space: nowrap;

    .eq-ie9 & {
        top: -0.7em;
    }
    .eq-ie7 & {
        top: -0.8em;
    }
}

sub {
    bottom: -0.25em;
}

picture {
    @include inline-block;

    // An extra 5px gets added to the bottom somehow
    img {
        margin-bottom: -5px;
    }
}

a > picture {
    display: block;
}

.eq-ie9 * {
    filter: none !important;
}

.eq-ie8 * {
    filter: inherit;
}

section {
    > .wrap--content {
        &:first-child {

            @include mq("lg") {
                padding-top: 44px;
            }
            @include mq("md") {
                padding-top: 34px;
            }
            @include mq("sm") {
                padding-top: 24px;
            }

            > :first-child {
                margin-top: 0;
                padding-top: 0;
            }
        }
        &:last-child {

            @include mq("lg") {
                padding-bottom: 44px;
            }
            @include mq("md") {
                padding-bottom: 34px;
            }
            @include mq("sm") {
                padding-bottom: 24px;
            }

            > :last-child {
                margin-bottom: 0;
                padding-bottom: 0;
            }
        }
    }
}

.eq-ie8 section {
    > .wrap--content {
        &.first-child {

            @include mq("lg") {
                padding-top: 44px;
            }
            @include mq("md") {
                padding-top: 34px;
            }
            @include mq("sm") {
                padding-top: 24px;
            }

            > .first-child {
                margin-top: 0;
                padding-top: 0;
            }
        }
        &.last-child {

            @include mq("lg") {
                padding-bottom: 44px;
            }
            @include mq("md") {
                padding-bottom: 34px;
            }
            @include mq("sm") {
                padding-bottom: 24px;
            }

            > .last-child {
                margin-bottom: 0;
                padding-bottom: 0;
            }
        }
    }
}


.wrap--content {
    margin: 0 auto;
    // min-height: 100%;
    @include clearfix; // stop margin collapse

    @include mq("lg") {
        width: 960px;

        &.full--lg {
            width: 100%;
            margin: 0;
        }
    }
    @include mq("md") {
        width: 100%;
        padding: 0 $md-gutter;

        &.full--md {
            margin: 0;
            padding: 0;
        }
    }
    @include mq("sm") {
        width: 100%;
        min-width: 320px;
        padding: 0 $sm-gutter;

        &.full--sm {
            margin: 0;
            padding: 0;
        }
    }
}

.wrap--refs {
    margin: 0 auto;
    // min-height: 100%;
    @include clearfix; // stop margin collapse

    @include mq("lg") {
        width: 655px;
        margin-top: 44px;
    }
    @include mq("md") {
        width: 100%;
        padding: 0 $md-gutter;
        margin-top: 34px;
    }
    @include mq("sm") {
        width: 100%;
        min-width: 320px;
        padding: 0 $sm-gutter;
        margin-top: 24px;
    }
}

.cf {
    @include clearfix;
}

.cb {
    clear: both;
}

.cr {
    clear: right;
}

.cl {
    clear: left;
}

.center {
    text-align: center;
}

.left{
    text-align: left;
}

.pre {
    white-space: pre;
}

.hide--lg {
    @include mq("lg") {
        display: none !important;
    }
}

.hide--md {
    @include mq("md") {
        display: none !important;
    }
}

.hide--sm {
    @include mq("sm") {
        display: none !important;
    }
}


[data-note]:before {
    content: attr(data-note);
    position: absolute;
    right: 100%;
    padding-right: 2px;
}

[data-note-sup]:before {
    content: attr(data-note-sup);
    position: absolute;
    right: 100%;
    padding-right: 2px;
    font-size: 0.6em;
    vertical-align: super;
}

// http://www.benmarshall.me/responsive-iframes/
.intrinsic-container {
    position: relative;
    height: 0;
    overflow: hidden;

    iframe,
    img {
        position: absolute;
        top:0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}
/* 16x9 Aspect Ratio */
.intrinsic-container-16x9 {
    padding-bottom: 56.25%;
}
/* 4x3 Aspect Ratio */
.intrinsic-container-4x3 {
    padding-bottom: 75%;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}


.veil {
    visibility: hidden !important;
}

.url {
    word-break: break-all;
}

.underline{
    text-decoration: underline;
}

